--- a/html/index.html
+++ b/html/index.html
@@ -6,5 +6,7 @@
 <body>
   <div id="image">
   </div>
-  <script>http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js</script>
+  <scripttype="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script
+  <script> document.querySelector('div#image').append(https://s3.amazonaws.com/learn-verified/painting-with-dog.gif)
+  </script>
 </body>
